add view more button

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,12 +54,12 @@ select {
   transform: translate(0%, 15px);
 }
 .nft-card:hover {
-transition: ease-in 2s;
+  transition: ease-in 2s;
 }
-.nft-card:hover img{
+.nft-card:hover img {
   height: 232px;
 }
-.nft-card:hover .collect-button{
+.nft-card:hover .collect-button {
   display: block;
 }
 /* .collect-button:hover{
@@ -73,4 +73,22 @@ transition: ease-in 2s;
 }
 .collect-button {
   background: linear-gradient(98.31deg, #ff8d8d -20.73%, #7d12e7 71.91%);
+}
+.rouded-button {
+  position: relative;
+  padding: 12px 32px;
+}
+.rouded-button::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 28px;
+  border: 2px solid transparent;
+  background: linear-gradient(90deg, #ff8d8d, #7d12e7) border-box;
+  -webkit-mask: linear-gradient(#fff 0 0) padding-box, linear-gradient(#fff 0 0);
+  -webkit-mask-composite: destination-out;
+  mask-composite: exclude;
 }
