remove container margin top

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -34,7 +34,7 @@
 }
 
 .container {
-  margin-top: 96px;
+  /* margin-top: 96px; */
   display: flex;
   flex-direction: column;
   align-items: center;
