--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -130,8 +130,8 @@
   outline-offset: 2px;
   line-height: 1.2;
   font-weight: 600;
-  transition-property: background-color, border-color, color, fill, stroke,
-    opacity, box-shadow, transform;
+  transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow,
+    transform;
   transition-duration: 200ms;
   height: 3rem;
   min-width: 3rem;
@@ -317,13 +317,13 @@
 .listingContainer {
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-between;
-  width: 1200px;
+  width: 1240px;
   max-width: 90vw;
-  gap: 20px;
-  margin-top: 5%;
-  height: 500px;
+  gap: 54px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .leftListing {
@@ -335,14 +335,6 @@
 }
 
 .mainNftImage {
-  width: 100%;
-  height: 100%;
-  max-height: 400px;
-  max-width: 400px;
-  border-radius: 16px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
 }
 
 .rightListing {
