--- a/styles/globals.css
+++ b/styles/globals.css
@@ -140,6 +140,10 @@ select {
   position: absolute;
   top: 50%;
   left: 8%;
+  font-size: 40px;
+  line-height: 46px;
+  font-weight: 600;
+  width: 50%;
   z-index: 1;
   -webkit-animation: fadeIn .6s;
   animation: fadeIn .6s;
@@ -161,8 +165,9 @@ select {
 .nft-step-box:hover .nft-step-description {
   display: block;
   position: absolute;
-  top: 60%;
+  top: 75%;
   left: 8%;
+  text-shadow: 0px 0px 1px #05050F;
   -webkit-animation: fadeIn 1.2s;
   animation: fadeIn 1.2s;
 }
